--- a/index.html
+++ b/index.html
@@ -20,38 +20,38 @@
 <script src="easy-parallaxe.js"></script>
 <script>
 	$(document).ready(function(){
-		//Parrallaxe init
-		$('.myElement').parrallaxe({
+		//parallaxe init
+		$('.myElement').parallaxe({
 			speed: 2,
 			direction: 'top',
 			type: 'element'
 		});
-		$('.myElement2').parrallaxe({
+		$('.myElement2').parallaxe({
 			speed: 0.5,
 			direction: 'top',
 			type: 'element'
 		});
-		$('.myElement3').parrallaxe({
+		$('.myElement3').parallaxe({
 			speed: 0.2,
 			direction: 'top',
 			type: 'element'
 		});
-		$('.background').parrallaxe({
+		$('.background').parallaxe({
 			speed: 1.5,
 			direction: 'top',
 			type: 'background'
 		});
-		$('.myElement4').parrallaxe({
+		$('.myElement4').parallaxe({
 			speed: 0.5,
 			direction: 'right',
 			type: 'element'
 		});
-		$('.myElement5').parrallaxe({
+		$('.myElement5').parallaxe({
 			speed: 0.5,
 			direction: 'left',
 			type: 'element'
 		});
-		$('.myElement6').parrallaxe({
+		$('.myElement6').parallaxe({
 			speed: 0.5,
 			direction: 'bottom',
 			type: 'element'
