--- a/index.html
+++ b/index.html
@@ -20,6 +20,31 @@
 <script src="easy-parallaxe.js"></script>
 <script>
 	$(document).ready(function(){
+
+		if(navigator.userAgent.indexOf("Chrome") != -1 ) 
+    {
+        alert('Chrome');
+    }
+    else if(navigator.userAgent.indexOf("Opera") != -1 )
+    {
+     alert('Opera');
+    }
+    else if(navigator.userAgent.indexOf("Firefox") != -1 ) 
+    {
+         alert('Firefox');
+    }
+     else if(navigator.userAgent.indexOf("Safari") != -1 ) 
+    {
+         alert('Safari');
+    }
+    else if((navigator.userAgent.indexOf("MSIE") != -1 ) || (!!document.documentMode == true )) //IF IE > 10
+    {
+      alert('IE'); 
+    }  
+    else 
+    {
+       alert('unknown');
+    }
 		//parallaxe init
 		$('.myElement').parallaxe({
 			speed: 2,
