--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 		if(navigator.userAgent.indexOf("Chrome") != -1 ) 
     {
         alert('Chrome');
+        alert(navigator.userAgent)
     }
     else if(navigator.userAgent.indexOf("Opera") != -1 )
     {
