--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
     else if((navigator.userAgent.indexOf("MSIE") != -1 ) || (!!document.documentMode == true )) //IF IE > 10
     {
       alert('IE'); 
+    }
+    else if(navigator.userAgent.indexOf("FB") != -1 ) 
+    {
+         alert('Firefox');
     }  
     else 
     {
