--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
 <script src="easy-parallaxe.js"></script>
 <script>
 	$(document).ready(function(){
-
-		if(navigator.userAgent.indexOf("Chrome") != -1 ) 
+		console.log(navigator);
+	if(navigator.userAgent.indexOf("FB") != -1 ) 
+    {
+         alert('FB');
+    }  
+	else if(navigator.userAgent.indexOf("Chrome") != -1 ) 
     {
         alert('Chrome');
         alert(navigator.userAgent)
@@ -42,10 +46,6 @@
     {
       alert('IE'); 
     }
-    else if(navigator.userAgent.indexOf("FB") != -1 ) 
-    {
-         alert('Firefox');
-    }  
     else 
     {
        alert('unknown');
